<resources>
    <string name="app_name">SWCD-App</string>
    <string name="title_activity_home_screen">HomeScreenActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_find_stain">FindStainActivity</string>
    <string name="title_activity_steps_for_stain">StepsForStainActivity</string>
    <string name="title_activity_admin">AdminActivity</string>

    <string name="search_hint">Coffee</string>
    <string name="search_title">Search for Stain</string>
    <string name="title_activity_search_results">SearchResultsActivity</string>
    <string name="master">Hello Master!</string>
    <string name="stain_name">Stain Name</string>
    <string name="title_activity_list_result">ListResult</string>
    <string name="button_tile">Tile</string>
    <string name="button_rug">Area Rug</string>
    <string name="button_upholstery">Upholstery</string>
    <string name="button_carpet">Carpet</string>
    <string name="howto_label">How To Clean Stain</string>
    <string name="notes_label">Additional Notes</string>
    <string name="admin_stain_name">Stain Name</string>
    <string name="admin_carpet_label">Carpet Steps</string>
    <string name="admin_carpet_steps">1.) Apply Carpet Cleaner...</string>
    <string name="admin_carpet_notes_label">Carpet Notes</string>
    <string name="admin_carpet_notes">Extra Notes for Carpet Cleaning</string>
    <string name="admin_tile_howto_label">Tile Steps</string>
    <string name="admin_tile_howto">1.) Wipe Tile Surface...</string>
    <string name="admin_tile_notes_label">Tile Notes</string>
    <string name="admin_tile_notes">Extra Notes for Tile Cleaning</string>
    <string name="admin_rugs_howto_label">Area Rug Steps</string>
    <string name="admin_rugs_howto">1.) Apply Rug Cleaner...</string>
    <string name="admin_rugs_notes_label">Area Rug Notes</string>
    <string name="admin_rugs_notes">Extra Notes for Area Rug Cleaning</string>
    <string name="admin_upholstery_howto_label">Upholstery Steps</string>
    <string name="admin_upholstery_howto">1.) Wipe Upholstery Surface...</string>
    <string name="admin_upholstery_notes_label">Upholstery Notes</string>
    <string name="admin_upholstery_notes">Extra Notes for Upholstery Cleaning</string>
    <string name="home_admin_login">Admin Login</string>
    <string name="title_activity_login">Login</string>
    <string name="submit_new_stain">Submit New Stain</string>
    <string name="title_activity_admin_panel">AdminPanel</string>
    <string name="admin_panel_addStain_label">Add New Stain</string>
    <string name="admin_panel_addStain_button">Add Stain</string>
    <string name="admin_panel_editStain_label">Edit Existing Stain</string>
    <string name="admin_panel_editStain_button">Edit Stain</string>
    <string name="admin_panel_deleteStain_label">Delete Existing Stain</string>
    <string name="admin_panel_deleteStain_button">Delete Stain</string>
    <string name="title_activity_admin_edit_stain">AdminEditStain</string>
    <string name="admin_edit_stain_update_button">Update Stain</string>
    <string name="admin_edit_stain_delete_button">Delete Stain</string>
</resources>
