<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.tuesday6.swcd_app.AdminEditStain">

        <ScrollView android:id="@+id/ScrollView01"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/relativeLayout">

                <!--Stain Name-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/admin_stain_name"
                    android:id="@+id/admin_edit_stain_label"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/admin_edit_stain_name"
                    android:hint="Coffee"
                    android:layout_below="@+id/admin_edit_stain_label"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true" />

                <!--Carpet-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/admin_carpet_label"
                    android:id="@+id/admin_edit_carpet_howto_label"
                    android:layout_below="@+id/admin_edit_stain_name"
                    android:layout_centerHorizontal="true" />

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:ems="10"
                    android:id="@+id/admin_edit_carpet_howto"
                    android:textAlignment="textStart"
                    android:hint="@string/admin_carpet_steps"
                    android:layout_below="@+id/admin_edit_carpet_howto_label"
                    android:layout_centerHorizontal="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/admin_carpet_notes_label"
                    android:id="@+id/admin_edit_carpet_notes_label"
                    android:layout_below="@+id/admin_edit_carpet_howto"
                    android:layout_centerHorizontal="true" />

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:hint="@string/admin_carpet_notes"
                    android:ems="10"
                    android:id="@+id/admin_edit_carpet_notes"
                    android:layout_below="@+id/admin_edit_carpet_notes_label"
                    android:layout_centerHorizontal="true" />

                <!--Tile-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/admin_tile_howto_label"
                    android:id="@+id/admin_edit_tile_howto_label"
                    android:layout_below="@+id/admin_edit_carpet_notes"
                    android:layout_centerHorizontal="true" />

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:hint="@string/admin_tile_howto"
                    android:ems="10"
                    android:id="@+id/admin_edit_tile_howto"
                    android:layout_below="@+id/admin_edit_tile_howto_label"
                    android:layout_centerHorizontal="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/admin_tile_notes_label"
                    android:id="@+id/admin_edit_tile_notes_label"
                    android:layout_below="@+id/admin_edit_tile_howto"
                    android:layout_centerHorizontal="true" />

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:hint="@string/admin_tile_notes"
                    android:ems="10"
                    android:id="@+id/admin_edit_tile_notes"
                    android:layout_below="@+id/admin_edit_tile_notes_label"
                    android:layout_centerHorizontal="true" />

                <!--Area Rugs-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/admin_rugs_howto_label"
                    android:id="@+id/admin_edit_rugs_howto_label"
                    android:layout_below="@+id/admin_edit_tile_notes"
                    android:layout_centerHorizontal="true" />

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:hint="@string/admin_rugs_howto"
                    android:ems="10"
                    android:id="@+id/admin_edit_rugs_howto"
                    android:layout_below="@+id/admin_edit_rugs_howto_label"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/admin_rugs_notes_label"
                    android:id="@+id/admin_edit_rugs_notes_label"
                    android:layout_below="@+id/admin_edit_rugs_howto"
                    android:layout_centerHorizontal="true" />

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:hint="@string/admin_rugs_notes"
                    android:ems="10"
                    android:id="@+id/admin_edit_rugs_notes"
                    android:layout_below="@+id/admin_edit_rugs_notes_label"
                    android:layout_alignParentStart="true" />

                <!--Upholstery-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/admin_upholstery_howto_label"
                    android:id="@+id/admin_edit_upholstery_howto_label"
                    android:layout_below="@+id/admin_edit_rugs_notes"
                    android:layout_centerHorizontal="true" />

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:hint="@string/admin_upholstery_howto"
                    android:ems="10"
                    android:id="@+id/admin_edit_upholstery_howto"
                    android:layout_below="@+id/admin_edit_upholstery_howto_label"
                    android:layout_centerHorizontal="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/admin_upholstery_notes_label"
                    android:id="@+id/admin_edit_upholstery_notes_label"
                    android:layout_below="@+id/admin_edit_upholstery_howto"
                    android:layout_centerHorizontal="true" />

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:hint="@string/admin_upholstery_notes"
                    android:ems="10"
                    android:id="@+id/admin_edit_upholstery_notes"
                    android:layout_below="@+id/admin_edit_upholstery_notes_label"
                    android:layout_centerHorizontal="true" />

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:id="@+id/admin_edit_stain"
                    android:text="@string/admin_edit_stain_update_button"
                    android:layout_below="@+id/admin_edit_upholstery_notes"/>

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:id="@+id/admin_delete_stain_button"
                    android:text="@string/admin_edit_stain_delete_button"
                    android:layout_below="@+id/admin_edit_stain"/>

            </RelativeLayout>
        </ScrollView>



    </RelativeLayout>
