<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StepsForStain"
    android:background="#0277BD"
    android:weightSum="1">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/stain_name"
        android:id="@+id/stain_name"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textColor="#F3E5F5"
        android:textStyle="bold"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="0dp"
        android:layout_alignParentTop="true"
        android:padding="15dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="10dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:id="@+id/linearLayout"
        android:weightSum="1">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="1dp"
            android:text="@string/button_carpet"
            android:id="@+id/carpet_button"
            android:textSize="13dp"
            android:background="@drawable/buttonshape"
            android:textColor="#EDE7F6"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:minWidth="72dp"
            android:layout_margin="1dp"
            android:maxWidth="80dp"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="1dp"
            android:text="@string/button_tile"
            android:id="@+id/tile_button"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/carpet_button"
            android:background="@drawable/buttonshape"
            android:textColor="#EDE7F6"
            android:textSize="13dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:minWidth="72dp"
            android:layout_margin="1dp"
            android:maxWidth="80dp"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="1dp"
            android:text="@string/button_rug"
            android:id="@+id/rug_button"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/tile_button"
            android:background="@drawable/buttonshape"
            android:textColor="#EDE7F6"
            android:textSize="13dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:minWidth="74dp"
            android:layout_margin="1dp"
            android:maxWidth="82dp"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="1dp"
            android:text="@string/button_upholstery"
            android:id="@+id/upholstery_button"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/rug_button"
            android:background="@drawable/buttonshape"
            android:textColor="#EDE7F6"
            android:textSize="13dp"
            android:layout_weight="0.44"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:minWidth="75dp"
            android:layout_margin="1dp"
            android:maxWidth="83dp"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>


    <ScrollView android:id="@+id/ScrollView01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="0dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="198dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="5dp"
                android:text="@string/howto_label"
                android:textColor="#F3E5F5"
                android:id="@+id/howto_label"
                android:textSize="25sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:ems="10"
                android:id="@+id/how_to"
                android:textColor="#F3E5F5"
                android:layout_gravity="center_horizontal"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="5dp"
                android:text="@string/notes_label"
                android:textColor="#F3E5F5"
                android:id="@+id/notes_label"
                android:textSize="25sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:ems="10"
                android:id="@+id/notes"
                android:textColor="#F3E5F5"
                android:layout_gravity="center_horizontal"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Admin Home"
        android:id="@+id/BackToAdminHOme"
        android:layout_alignTop="@+id/stain_name"
        android:background="@drawable/buttonshape"
        android:textColor="#EDE7F6"
        android:layout_alignEnd="@+id/linearLayout"
        android:padding="15dp" />


</RelativeLayout>
